<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/light_navy"
        android:contentDescription="@string/fab_add"
        android:src="@drawable/ic_plus"
        app:fabCustomSize="34dp"
        app:layout_constraintBottom_toBottomOf="@id/rv_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_cards"
        app:maxImageSize="16dp"
        app:tint="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="5dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="100dp"
        android:paddingEnd="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_list_item" />

    <ProgressBar
        android:id="@+id/progress_circular_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_cards"
        app:layout_constraintEnd_toEndOf="@+id/rv_cards"
        app:layout_constraintStart_toEndOf="@+id/fab_add"
        app:layout_constraintTop_toTopOf="@+id/rv_cards" />

    <ImageView
        android:id="@+id/iv_cards_error"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/error"
        android:src="@drawable/ic_error"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_cards"
        app:layout_constraintEnd_toEndOf="@+id/rv_cards"
        app:layout_constraintStart_toEndOf="@+id/fab_add"
        app:layout_constraintTop_toTopOf="@+id/rv_cards" />

    <ImageView
        android:id="@+id/iv_cards_empty"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/ic_empty"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_cards"
        app:layout_constraintEnd_toEndOf="@+id/rv_cards"
        app:layout_constraintStart_toEndOf="@+id/fab_add"
        app:layout_constraintTop_toTopOf="@+id/rv_cards" />


    <LinearLayout
        android:id="@+id/cl_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_contact_list_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:transitionName="@string/transition_contacts_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cards">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_contact"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_search">

            <TextView
                android:id="@+id/tv_contact_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/contact_list"
                android:textColor="@color/black_two"
                android:textSize="16sp" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_contacts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/contact_list_item" />

        <ProgressBar
            android:id="@+id/progress_circular_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_contacts_error"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/error"
            android:src="@drawable/ic_error"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_contacts_empty"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty"
            android:src="@drawable/ic_empty"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
